# minisat

./: .dockerignore  .gitignore  Dockerfile  build-docker.sh  meson.build  minisat.wrap  wapm.toml  wasm-ld-fix.sh  wasm-wasi.txt
minisat/core/: Dimacs.h  Main.cc
minisat/mtl/: Alloc.h  Vec.h  XAlloc.h
minisat/utils/: ParseUtils.h  System.cc  ZUtils.h
subprojects/: zlib.wrap
subprojects/packagefiles/zlib/: gzlib.c
